main.css
*{
    box-sizing: border-box;
}

html,body {
    padding:0;
    margin:0;
    height:100%;
    font-size: 62.5%;
    font-family: 'Bangers' ,'Arial'
}

body{
    font-size: 1.6rem;
}

.hero-introduction{
    font-size: 2.3rem;
    color: white;
}

.hero-drag-box-comic-font{
    background-color: black;
}

.middle-section, .top-section{
    width: 100%;
    height: 40%;
}

.title-section{
    display: flex;
    flex-direction: column;
    align-items: center;
}


.top-section {
    margin-top: .5rem;
}

.villain-box-left, .villain-box-center, .user-input-hero-box{
    width: calc(30% - 8px);
    height:100%;
    float:left;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 4px;

}

.villain-box-center, .hero-description-box-left{
    flex-direction: column;

}



.villain-box-left, .villain-box-center{
    border: 2px solid black;
}

.user-input-hero-box{
    width: calc(40% - 8px);
    flex-direction: column;
}

.hero-drag-box-comic-font, .hero-drag-box-bottom{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-drag-box-comic-font{
    flex: 0 0 20%;
    border: 2px solid black;
    margin-bottom: 4px;
}

.hero-drag-box-bottom{
    flex: 0 0 calc(80% - 8px);
    border: 2px solid black;
    margin-top: 4px;

}

.hero-description-box-left, .combat-box-center, .victory-or-defeat-box-right{
    width: calc(45% - 8px);
    height:100%;
    float:left;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid black;
    margin: 0 4px;
}

.combat-box-center{
    width: calc(35% - 8px);
}

.victory-or-defeat-box-right{
    width: calc(20% - 8px);
    flex-direction: column;
}

ul{
    display: flex;
    justify-content: space-around;
}

li{
    list-style: none;

    width: 10%;
}


.hero-img{
    max-width: 300px;
    max-height: 300px;
    border: 1px solid black;    
}


img{
    width: 100%; /* or any custom size */
    height: 100%; 
    object-fit: cover;

}

